force-app/main/default/objects/Off_Limits__c/Off_Limits__c.object-meta.xml
<CustomObject>
    <label>Off Limits</label>
    <nameField>
        <label>Off Limits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Off Limits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>