force-app/main/default/objects/Off_Limits__c/fields/Initial_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Assignment</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Off Limits</relationshipLabel>
    <relationshipName>Off_Limits</relationshipName>
    <type>Lookup</type>
</CustomField>